# toml_sorted

./: MANIFEST.in  Makefile  README.rst  pyproject.toml
docs/: CNAME  index.html  v1.0.rst  v2.0.rst  v2.1.rst
make/: jacobus.txt  toml_get.txt  toml_sort.py  toml_sort.txt
src/toml_sorted/: __init__.py  __main__.py
src/toml_sorted/core/: __init__.py  main.py  run.py
src/toml_sorted/enum/: Instruction.py  Selector.py
src/toml_sorted/tests/: __init__.py  test_0.py
tests/: test_0.py  test_1.py  test_2.py  test_3.py
