[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "setdoc>=1.3.14,<3",
    "tomli_w>=1.2,<2",
]
description = "This project sorts TOML data."
keywords = []
license = "MIT"
license-files = [
    "LICENSE.txt",
]
name = "toml_sorted"
readme = "README.rst"
requires-python = ">=3.11"
version = "2.1.1"

[project.urls]
Download = "https://pypi.org/project/toml_sorted/#files"
Index = "https://pypi.org/project/toml_sorted/"
Source = "https://github.com/johannes-programming/toml_sorted/"
Website = "https://toml-sorted.johannes-programming.online/"

[tool.mypy]
files = [
    ".",
]
python_version = "3.11"
strict = true
